top overlapping with toolbar fixed

--- a/packages/bot-web-ui/src/components/dashboard/dashboard.scss
+++ b/packages/bot-web-ui/src/components/dashboard/dashboard.scss
@@ -108,4 +108,8 @@
         width: calc(100vw - 3.2rem);
         height: var(--tab-content-height-mobile);
     }
+
+    .injectionDiv {
+        top: 5rem;
+    }
 }
